[tool.poetry]
name = "twitter-search"
version = "0.1.0"
description = "A project to get, clean and analyze users from twitter"
authors = ["praveen Chandar Devarajan <praveenc@uchicago.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
tweepy = "^4.14.0"
googlemaps = "^4.10.0"
googletrans= "^3.0.0"
langdetect = "^1.0.9"
geopandas = "^0.14.4"
transformers = "^4.40.2"
torch = "^2.3.0"
geopy = "^2.4.1"
tqdm = "^4.66.4"
boto3 = "^1.35.15"
botocore = "^1.35.15"
datasets = "^3.0.2"
openpyxl = "^3.1.5"
accelerate = "^1.0.1"
huggingface-hub = "^0.26.2"
twikit = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
