[tool.poetry]
name = "twitter-search"
version = "0.1.0"
description = "A project to get, clean and analyze users from twitter"
authors = ["praveen Chandar Devarajan <praveenc@uchicago.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
tweepy = "^4.14.0"
langdetect = "^1.0.9"
tqdm = "^4.66.4"
boto3 = "^1.35.15"
botocore = "^1.35.15"
datasets = "^3.0.2"
openpyxl = "^3.1.5"
accelerate = "^1.0.1"
twikit = "^2.2.0"
httpx = "^0.28.0"
pre-commit = "^4.2.0"
matplotlib = "^3.10.1"
scipy = "^1.15.2"
gremlinpython = "^3.7.3"
requests-aws4auth = "^1.3.1"
websocket-client = "^1.8.0"
requests-auth-aws-sigv4 = "^0.7"
google-generativeai = "^0.8.5"
openai = "^1.84.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
